src/test/ui/issues/issue-58006.stderr
error[E0533]: expected unit struct/variant or constant, found tuple variant `<Self>::A`
  --> $DIR/issue-58006.rs:9:13
   |
LL |             Self::A => (),
   |             ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0533`.
